<resources>
    <string name="app_name">OnlineShopApp</string>

    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password</string>
    <string name="lbl_forgot_password_quz">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>


    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="et_hint_first_name">First Name</string>
    <string name="et_hint_last_name">Last Name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_terms">I Agree To The <u> Terms &amp; Conditions</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="Already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_emailID">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_conditions">Please agree terms and conditions.</string>
    <string name="register_successful">Thanks for registering</string>
    <string name="login_successful">Your are logged in successfully</string>

    <string name="user_registered_firebase">You are registered successfully. Your user id is </string>

    <string name="please_wait">Please Wait&#8230;</string>

    <string name="forgot_password_msg">Enter your username and email address\nwe\'ll send you a email to reset your\npassword</string>

    <string name="submit">Submit</string>

</resources>