<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ForgotPasswordActivity">

    <FrameLayout
        android:id="@+id/f1_header_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description"
            android:src="@drawable/auth_screen_background"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:src="@drawable/logo"
            android:scaleType="fitCenter"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center"
            app:tint="@color/colorWhite" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forgot_password_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"/>

    </FrameLayout>

    <ruzaik.mh.onlineshopapp.utils.CustomTextViewBold
        android:id="@+id/forgot_password_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/lbl_forgot_password_quz"
        android:textSize="@dimen/forgot_title_textSize"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/f1_header_image"/>

    <ruzaik.mh.onlineshopapp.utils.CustomTextView
        android:id="@+id/forgot_password_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/forgot_password_msg"
        android:textSize="@dimen/forgot_title_description_textSize"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_header"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/colorSecondaryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_msg">

        <ruzaik.mh.onlineshopapp.utils.CustomEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/et_padding"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/et_textSize"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ruzaik.mh.onlineshopapp.utils.CustomButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingTop="@dimen/btn_padding"
        android:paddingBottom="@dimen/btn_padding"
        android:text="@string/submit"
        android:background="@drawable/button_background"
        android:foreground="?attr/selectableItemBackground"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_forgotPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>